--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </li>
       </ul>
 
-      <h3>Account Executive - EMMA TEL / Syria.Homs/h3>
+      <h3>Account Executive - EMMA TEL / Syria.Homs</h3>
       <p><strong>Date:</strong> October 2020 - December 2021</p>
 
       <h4>Achievements and Responsibilities:</h4>
